# rslidar_sdk

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_CN.md  CHANGELOG_EN.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  nodelets.xml  package.xml  package_ros1.xml  package_ros2.xml  新版LiDAR 驱动参数简介.docx
adapter/: lidar_driver_adapter.hpp  lidar_packets_ros_adapter.h  lidar_packtes_ros_adapter.cpp  lidar_points_ros_adapter.cpp  lidar_points_ros_adapter.h
common/src/utility/: thread_pool.cpp
common/src/yaml/: yaml_parser.cpp
config/: config.yaml  multi_lidar_config.yaml  two_lidars_config.yaml
config/left_lidar/: lidar.yaml
config/middle_lidar/: lidar.yaml
config/right_lidar/: lidar.yaml
demo/: demo.cpp
doc/howto/: 05_how_to_change_point_type.md  05_how_to_change_point_type_CN.md  06_how_to_decode_online_lidar.md  06_how_to_decode_online_lidar_CN.md  07_online_lidar_advanced_topics.md  07_online_lidar_advanced_topics_CN.md  08_how_to_decode_pcap_file.md  08_how_to_decode_pcap_file_CN.md  09_pcap_file_advanced_topics.md  09_pcap_file_advanced_topics_CN.md  10_how_to_use_coordinate_transformation.md  10_how_to_use_coordinate_transformation_CN.md  11_how_to_record_replay_packet_rosbag.md  11_how_to_record_replay_packet_rosbag_CN.md  how_to_change_point_type.md  how_to_change_point_type_CN.md  how_to_create_deb.md  how_to_decode_online_lidar.md  how_to_decode_online_lidar_CN.md  how_to_decode_online_lidar_cn.md  how_to_decode_pcap.md  how_to_decode_pcap_cn.md  how_to_decode_pcap_file.md  how_to_decode_pcap_file_CN.md  how_to_decode_pcap_file_cn.md  how_to_offline_decode_pcap.md  how_to_offline_decode_pcap_cn.md  how_to_online_send_point_cloud_ros.md  how_to_online_send_point_cloud_ros_cn.md  how_to_online_send_pointcloud_ros.md  how_to_online_send_pointcloud_ros_cn.md  how_to_record_and_offline_decode_rosbag.md  how_to_record_and_offline_decode_rosbag_cn.md  how_to_record_replay_packet_rosbag.md  how_to_record_replay_packet_rosbag_CN.md  how_to_record_replay_packet_rosbag_cn.md  how_to_switch_point_type.md  how_to_switch_point_type_cn.md  how_to_use_coordinate_transformation.md  how_to_use_coordinate_transformation_CN.md  (+15 more)
doc/intro/: 02_parameter_intro.md  02_parameter_intro_CN.md  03_hiding_parameters_intro.md  03_hiding_parameters_intro_CN.md  hiding_parameters_intro.md  hiding_parameters_intro_CN.md  hiding_parameters_intro_cn.md  parameter_intro.md  parameter_intro_CN.md  parameter_intro_cn.md
doc/src_intro/: rslidar_sdk_intro.md  rslidar_sdk_intro_CN.md
doc/test_cases/: rsliar_sdk_test_case.md
launch/: elequent_start.py  humble_start.py  multi_lidar_start.py  start.launch  start.py  start_component.launch.py  start_nodelet_standalone.launch  velodyne_start.launch
manager/: manager.h
node/: imu_transformer.py  node.cpp  renombrar.py  rslidar_sdk_node.cpp  rslidar_sdk_node_component.cpp  rslidar_sdk_nodelet.cpp  velodyne_transformer.py
rviz/: rviz.rviz
src/adapter/: adapter.hpp  adapter_base.h  adapter_base.hpp  camera_trigger_adapter.hpp  driver_adapter.hpp  driver_source.hpp  lidar_adapter_base.h  lidar_driver_adapter.hpp  lidar_packets_proto_adapter.cpp  lidar_packets_proto_adapter.h  lidar_packets_proto_adapter.hpp  lidar_packets_ros_adapter.h  lidar_packets_ros_adapter.hpp  lidar_packtes_ros_adapter.cpp  lidar_points_proto_adapter.cpp  lidar_points_proto_adapter.h  lidar_points_proto_adapter.hpp  lidar_points_ros_adapter.cpp  lidar_points_ros_adapter.h  lidar_points_ros_adapter.hpp  packet_protobuf_adapter.hpp  packet_ros_adapter.hpp  point_cloud_protobuf_adapter.hpp  point_cloud_ros_adapter.hpp  pointcloud_protobuf_adapter.hpp  pointcloud_ros_adapter.hpp  proto_packet_adapter.hpp  proto_point_cloud_adapter.hpp  ros_packet_adapter.hpp  ros_packet_source.hpp  ros_point_cloud_adapter.hpp  source.hpp
src/common/: CMakeLists.txt  common.h  lidar_base.h  lidar_packets_interface.h  lidar_points_interface.h  protobuf_com.hpp  protobuf_communicator.hpp  yaml_reader.hpp
src/common/debug/: prompt.h
src/common/include/common/: common.h
src/common/include/common/debug/: error_code.h  prompt.h
src/common/include/common/interface/sensor/: lidar_packets_interface.h  lidar_points_interface.h
src/common/include/common/msg/: proto_msg_translator.h  ros_msg_translator.h
src/common/include/common/msg/proto_msg/: Proto_msg.LidarPacket.proto
src/common/include/common/msg/ros_msg/: lidar_packet_ros.h
src/common/include/common/msg/rs_msg/: lidar_points_msg.h  lidar_scan_msg.h
src/common/include/common/proto/: proto_base.hpp
src/common/include/common/utility/: thread_pool.h  time.h
src/common/include/common/yaml/: yaml_parser.h
src/common/interface/sensor/: lidar_packets_interface.h  lidar_points_interface.h
src/common/proto/: proto_base.hpp
src/common/src/yaml/: yaml_parser.cpp
src/core/: cuda_flatscan.cu  cuda_point_types.cuh  cuda_roi_filter.cu  cuda_transform_merge.cu  cuda_transform_merge.cuh  cuda_voxel_grid.cu
src/interface/: lidar_base.h  lidar_packets_interface.h  lidar_points_interface.h
src/manager/: adapter_manager.cpp  adapter_manager.h  adapter_manager.hpp  gpu_lidar_handler.hpp  lidar_handler.hpp  lidar_manager.hpp  manager.cpp  manager.h  manager.hpp  multi_lidar_node.cpp  multi_lidar_node.hpp  node_manager.cpp  node_manager.hpp
src/msg/: proto_msg_translator.h  ros_msg_translator.h
src/msg/proto_msg/: Proto_msg.LidarPacket.pb.cc  Proto_msg.LidarPacket.proto  Proto_msg.LidarPointCloud.proto  Proto_msg.LidarPoints.pb.h  Proto_msg.LidarPoints.proto  Proto_msg.LidarScan.proto  packet.proto  point_cloud.proto  scan.proto
src/msg/ros_msg/: lidar_packet_ros.h  lidar_scan_ros.h  rslidarPacket.h  rslidarPacket.msg
src/msg/rs_msg/: lidar_packet_msg.h  lidar_point_cloud_msg.h  lidar_point_cloud_msg.hpp  lidar_points_msg.h  lidar_scan_msg.h
src/source/: source.hpp  source_driver.hpp  source_packet_proto.hpp  source_packet_ros.hpp  source_pointcloud_proto.hpp  source_pointcloud_ros.hpp
src/utility/: common.h  lock_queue.h  protobuf_communicator.hpp  thread_pool.hpp  time.h  yaml_reader.hpp
(+16 files in other folders)
